apps/dendrite/modules/nginx/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
spec:
  type:  NodePort
  ports:
  - name:  http
    port:  80
    targetPort:  80
