apps/dendrite/modules/nginx/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`matrix.arctiq.codegameeat.com`)
      services:
        - name: nginx
          port: http
  tls:
    certResolver: le
